objects/CMPL123QMS__OOS__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123QMS__Actual_Results__c</fullName>
        <label>Actual Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Affected_Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affected Material</label>
        <referenceTo>CMPL123QMS__Approved_Material__c</referenceTo>
        <relationshipLabel>OOSs</relationshipLabel>
        <relationshipName>OOSs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Assigned_To_Me__c</fullName>
        <formula>CMPL123QMS__Assigned_To__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OOSS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Background__c</fullName>
        <label>Background</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Batch_Number__c</fullName>
        <label>Batch Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Department__c</fullName>
        <label>Department</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CMPL123QMS__Department</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Detected_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Detected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OOSS3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Detected_On__c</fullName>
        <label>Detected On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Disposition_Recommendation__c</fullName>
        <label>Disposition Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Batch Accepted</fullName>
                </value>
                <value>
                    <fullName>Batch Rejected</fullName>
                </value>
                <value>
                    <fullName>Reprocessing Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Expected_Results__c</fullName>
        <label>Expected Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Further_Actions_Details__c</fullName>
        <label>Further Actions Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Further_Actions_Needed__c</fullName>
        <label>Further Actions Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Lab_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lab Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OOSS1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Lot__c</fullName>
        <label>Lot</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Non_Obvious_Lab_Error__c</fullName>
        <formula>""</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Obvious Lab Error?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Obvious_Lab_Error__c</fullName>
        <formula>""</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Obvious Lab Error?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Other_Batches_Affected__c</fullName>
        <label>Other Batches Affected?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Other_Phase_1A_Cause__c</fullName>
        <formula>""</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Phase 1A Cause</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Other_Phase_1B_Cause__c</fullName>
        <formula>""</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Phase 1B Cause</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Other_Phase_2_Lab_Cause__c</fullName>
        <formula>""</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Phase 2 Lab Cause</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Other_Phase_2_Mfr_Cause__c</fullName>
        <formula>""</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Phase 2 Mfr. Cause</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Phase_1A_Cause__c</fullName>
        <formula>""</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase 1A Cause</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Phase_1A_Error_Details__c</fullName>
        <formula>""</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase 1A Error Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Phase_1B_Cause__c</fullName>
        <formula>""</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase 1B Cause</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Phase_1B_Error_Details__c</fullName>
        <formula>""</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase 1B Error Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Phase_2_Lab_Cause__c</fullName>
        <formula>""</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase 2 Lab Cause</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Phase_2_Lab_Error_Details__c</fullName>
        <formula>""</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase 2 Lab Error Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Phase_2_Lab_Error__c</fullName>
        <formula>""</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase 2 Lab Error?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Phase_2_Mfr_Cause__c</fullName>
        <formula>""</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase 2 Mfr. Cause</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Phase_2_Mfr_Error_Details__c</fullName>
        <formula>""</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase 2 Mfr. Error Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Phase_2_Mfr_Error__c</fullName>
        <formula>""</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase 2 Mfr. Error?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>OOSS</relationshipLabel>
        <relationshipName>OOSS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Reference__c</fullName>
        <label>Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Reported_Results__c</fullName>
        <label>Reported Results</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Root_Cause_Details__c</fullName>
        <label>Root Cause Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Root_Cause_Determined__c</fullName>
        <label>Root Cause Determined?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Root_Cause_Identified_as__c</fullName>
        <label>Root Cause Identified as</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phase 1A Investigation</fullName>
                </value>
                <value>
                    <fullName>Phase 1B Investigation</fullName>
                </value>
                <value>
                    <fullName>Phase 2 Lab Investigation</fullName>
                </value>
                <value>
                    <fullName>Phase 2 Manufacturing Investigation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Scope_of_Impact__c</fullName>
        <label>Scope of Impact</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Short_Description__c</fullName>
        <label>Short Description</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Spec_ID__c</fullName>
        <label>Spec ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Statement__c</fullName>
        <label>Statement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OOSS2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__TWD_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>CMPL123__Product__c</referenceTo>
        <relationshipLabel>OOS</relationshipLabel>
        <relationshipName>OOS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Test_Method_ID__c</fullName>
        <label>Test Method ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Test__c</fullName>
        <label>Test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assay</fullName>
                </value>
                <value>
                    <fullName>Related Compounds</fullName>
                </value>
                <value>
                    <fullName>Dissolution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>OOS</label>
    <listViews>
        <fullName>CMPL123QMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OOS-{00000}</displayFormat>
        <label>OOS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OOS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CMPL123QMS__Due_Date_OOS_validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CMPL123QMS__Due_Date__c &lt; TODAY(), OR( ISNEW(), ISCHANGED(CMPL123QMS__Due_Date__c)))</errorConditionFormula>
        <errorDisplayField>CMPL123QMS__Due_Date__c</errorDisplayField>
        <errorMessage>Due Dates cannot be populated with a date in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123QMS__Further_Actions_Details_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL( CMPL123QMS__Further_Actions_Needed__c   , "Yes"), ISBLANK(  CMPL123QMS__Further_Actions_Details__c   ),False )</errorConditionFormula>
        <errorDisplayField>CMPL123QMS__Further_Actions_Details__c</errorDisplayField>
        <errorMessage>Further Actions Details is required when Further Actions Needed? is populated with a value of Yes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123QMS__Root_Cause_Details_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL( CMPL123QMS__Root_Cause_Determined__c  , "Yes"), ISBLANK(  CMPL123QMS__Root_Cause_Details__c  ),False )</errorConditionFormula>
        <errorDisplayField>CMPL123QMS__Root_Cause_Details__c</errorDisplayField>
        <errorMessage>Root Cause Details is required when Root Cause Determined? is populated with a value of Yes.</errorMessage>
    </validationRules>
</CustomObject>